<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
            android:id="@+id/chart_pair_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_row_title_top_margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/pair_table_label"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/chart_titles_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/f_divider1"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chart_exchange_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_row_title_middle_margin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/exchange_table_label"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/chart_titles_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/f_divider1"
        app:layout_constraintTop_toBottomOf="@+id/chart_pair_label" />

    <View
        android:visibility="invisible"
        android:id="@+id/f_divider1"
        android:layout_width="@dimen/divider_width"
        android:layout_height="@dimen/title_divider_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/f_divider2"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/chart_cur_prise_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chart_title_top_margin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cur_price_table_label"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/chart_titles_text_size"
        app:layout_constraintStart_toEndOf="@+id/f_divider1"
        app:layout_constraintEnd_toStartOf="@+id/f_divider2"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:visibility="invisible"
        android:id="@+id/f_divider2"
        android:layout_width="@dimen/divider_width"
        android:layout_height="@dimen/title_divider_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/f_divider1"
        app:layout_constraintEnd_toStartOf="@+id/f_divider3"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/chart_1_change_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chart_title_top_margin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_1d_change_table_label"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/chart_titles_text_size"
        app:layout_constraintStart_toEndOf="@+id/f_divider2"
        app:layout_constraintEnd_toStartOf="@+id/f_divider3"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:visibility="invisible"
        android:id="@+id/f_divider3"
        android:layout_width="@dimen/divider_width"
        android:layout_height="@dimen/title_divider_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/f_divider2"
        app:layout_constraintEnd_toStartOf="@+id/f_divider4"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/chart_7_change_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chart_title_top_margin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_7d_change_table_label"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/chart_titles_text_size"
        app:layout_constraintStart_toEndOf="@+id/f_divider3"
        app:layout_constraintEnd_toStartOf="@+id/f_divider4"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:visibility="invisible"
        android:id="@+id/f_divider4"
        android:layout_width="@dimen/divider_width"
        android:layout_height="@dimen/title_divider_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/f_divider3"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/chart_30_change_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chart_title_top_margin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_30d_change_table_label"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/chart_titles_text_size"
        app:layout_constraintStart_toEndOf="@+id/f_divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/warehouse_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/rv_top_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart_exchange_label"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/chart_item" />

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorProgressBarBackground"
        android:visibility="gone"
        tools:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



